--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.6",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "material-ui": "^0.20.0",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-calendar": "^2.14.0",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
